Wysigingen döär [[Special:Contributions/185.110.113.190|185.110.113.190]] ([[User talk:185.110.113.190|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:CommonsDelinker|CommonsDelinker]]

--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -9,7 +9,7 @@
 | oppervlak = 
 | oppervlak laand =
 | oppervlak water =
-| inwoners = 500.000
+| inwoners = 
 | doatum inwoners = 
 | dichtheid = 
 | breedtegroad = 52/0/45/N
