*Empty MediaWiki Message*

--- a/Akteur.mw
+++ b/Akteur.mw
@@ -1,4 +1,4 @@
-[[File:Atkinson Rowan.jpg|thumb|Aktrice]]
+[[File:Atkinson Rowan.jpg|thumb|Britsen akteur [[Rowan Atkinson]]]]
 
 Nen '''Akteur''' of ne ''aktrice'' is der ene den't n [[karakter]] oetbeeldt in n verhaal of rolnspel.
 
