--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -224,13 +224,13 @@ Hamilton wördet esen as eynen van de beste reagenryders in den sport en summige
 Eyrder in syne karriere wyr Hamilton bekritisered vöär sums wuudend too wean, so as doo hy ediskwalificered wyr in Imola in den GP2 vöär et inhålen van den safety car, wat hy veer jår låter sül herhålen in de Formule Eyn in den europäesken Grouten Prys van 2010 in Valencia. Skonwal hevt Hamilton låter in syne karriere meyr vulwassenheyd etöyned, terwyl hy syne genadelousheyd en agressy beholdeden. Hy verdealeden de meningen van et publyk en vöärmålige koureurs in de låtste race van et seisoon van 2016, wår hy an de leiding teagen de teamorders inging döär Nico Rosberg too vertrågen en too dwingen in de achtervölgende gruup üm by öäre rivålen uut too lokken dat sy synen teammåten in gingen hålen, wat hem in ståt had estelled üm et werldkampioonskap too winnen.
 
 === Untvangst ===
-Hamilton is often considered the best driver of his generation, and widely regarded as one of the greatest Formula One drivers in the history of the sport. Often considered among the greatest British drivers in Formula One, Hamilton is the most successful, having [//en.wikipedia.org/wiki/List_of_Formula_One_Grand_Prix_winners more race victories than any other British driver] in the history of Formula One and matching [//en.wikipedia.org/wiki/Jim_Clark Jim Clark] and [//en.wikipedia.org/wiki/Alain_Prost Alain Prost]'s five [//en.wikipedia.org/wiki/British_Grand_Prix British Grand Prix] victories. His jet-set lifestyle and interests outside Formula One have been criticised, however, figures in the sport such as [//en.wikipedia.org/wiki/Emerson_Fittipaldi Emerson Fittipaldi] and [//en.wikipedia.org/wiki/Christian_Horner Christian Horner] have voiced their support for Hamilton's ability to connect with fans. Bernie Ecclestone has frequently commented on his admiration of Hamilton's ability to promote the sport through his lifestyle, noting how he is happy to engage with fans, unlike some of his peers. Since Hamilton's rookie season in 2007, Formula One's annual global revenue has risen by 53%, to $1.83&nbsp;billion as of 31 July 2016.
+Hamilton wördet våke esen as den besten koureurs van syne generatsy en algemeyn beskowed as eynen van den gröytsten Formule Eynkoureurs in de geskydenis van den sport. Våke wördet hy beskowed by den gröytsten britsken koureurs in de Formule Eyn, Hamilton is den meyst süksesvullen, want hy hevt meyr raceoaverwinningen dan eynig anderen britsken koureur in de geskydenis van de Formule Eyn en vyv oaverwinningen in den britsken Grouten Prys net as Jim Clark en Alain Prost. Syne lükse leavensstyl en interessen buuten de Formule Eyn bünt bekritisered, skonwal hebbet lüde uut den sport so as Emerson Fittipaldi en Christian Horner öäre steun egeaven vöär Hamiltons vermogen üm kontakt too måken med de fans. Bernie Ecclestone hevt reagelm tigBereagered med syne bewundering van et vermogen van Hamilton üm den sport too promoten med synen leavensstyl, upmarkend hoo hy blyde is üm med fans üm too gån anders as sümmige van syne kollegas. Sinds Hamiltons eyrste seisoon in 2007, hevt den jårliksken werldwyden upbrengst van de Formule Eyn tooenömmen med 53% når $1,83&nbsp;miljard up 31 jüly 2016.
 
-A prodigious talent as a teenager, Hamilton established himself as one of the world's best drivers following his record-breaking rookie year where he matched his teammate, two-time world champion [//en.wikipedia.org/wiki/Fernando_Alonso Fernando Alonso] and finished runner-up in the championship by a solitary point. After his first world title in 2008, many people considered Hamilton the best driver of his generation. Following [//en.wikipedia.org/wiki/Red_Bull_Racing Red Bull] and [//en.wikipedia.org/wiki/Sebastian_Vettel Sebastian Vettel]'s four-year dominance of the sport over the next four years, Hamilton's resolve was tested both professionally and personally as he did not yield a finish higher than fourth in the Drivers' Championship, leading some to question his status as the best driver in the sport.
+Al nen grout talent as nen tyner, hevt Hamilton sichselv neaderesettet as eynen van de beste koureurs van de werld nå syn rekordbrekkenden debutjår wår hy gelykkwam med synen teammåt, den tweymåligen werldkampioon Fernando Alonso en wyr tweyden in et kampioonskap med mår eyn pünt achterstand. Nå syne eyrste werldtitel in 2008 beskoweden vele lüde Hamilton as den besten koureur van syne generatsy. Nå nen veer jor lange dlminantsy van Red Bull en Sebastian Vettel in den sport in de vulgende veer jreon, wyr slwal professioneel en persoonlik etested ümdat hy neet höyger as de veerde plåtse in et individüellen kampioonskap, wat dertoo leideden dat summigen synen status as den besten koureur in den sport gingen betwyvelen. 
 
-Three years later, after clinching his second and third World Championship titles with Mercedes in dominant fashion over long-time friend and teammate [//en.wikipedia.org/wiki/Nico_Rosberg Nico Rosberg], [//en.wikipedia.org/wiki/David_Coulthard David Coulthard] declared Hamilton the best driver of his generation, calling him "the Ayrton Senna of his era". This opinion gradually gained greater acceptance amongst the public, experts and fellow and former drivers. His less successful years with McLaren have also been cited as a demonstration of driving ability as Hamilton has won [//en.wikipedia.org/wiki/List_of_Formula_One_driver_records%23Most_consecutive_seasons_with_a_Grand_Prix_win at least one race in twelve consecutive seasons], attracting high praise from seasoned racers for extracting race-winning performances from cars that were not dominant. As Hamilton's success continued, achieving the most all-time pole positions and the second most race victories, as well as his fourth World Championship title, public and expert debate moved from his status in modern Formula One to his status amongst the greatest drivers in history.
+Dree jår låter nådat hy syne tweyde en darde werldtitel had behåled med Mercedes up ne dominante wyse vöär jöygdvrind en teammft Nico Rosberg verklareden David Coulthard Hamilton den besten koureur van syne generatsy en nuumeden hem <nowiki>''den Ayrton Senna van synen tyd''</nowiki>. Disse mening wyr uutendelik breyder eakseptered by et püblik, de eksperts, medekoureurs en vöärmålige koureurs. Syne minder süksesvulle jåren by McLaren bünt ok ecitered as nen vöärbeyld van syne ryvermogen ümdat Hamilton ten minsten eyne race hevt ewönnen per seisoon in twålv seisoonen up nen ry en kreg groute lov van ervåren koureurs vöär et behålen van winnende prestatsys uut wågen dy neet dominant waren. Terwyl et sükses van Hamilton wyderging, wårby hy de meyste eyrste startpositsys allertyden en et up eyn nå gröytsten antal raceoaverwinningen, as ok syne veerde werldtitel, ging et debat van et püblik en de eksperts oaver van synen status in de moderne Formule Eyn in nen debat over synen status tüsken de gröytste koureurs in de geskydenis.
 
-=== Rivalry with Nico Rosberg ===
+=== Rivaliteyt ned Nico Rosberg ===
 [[File:Nico_Rosberg_and_Lewis_Hamilton_2016_Malaysia.jpg|rechts|duum|Lewis Hamilton (left) and Nico Rosberg (right) at the [//en.wikipedia.org/wiki/2016_Malaysian_Grand_Prix 2016 Malaysian Grand Prix].]]
 When Hamilton joined Mercedes in 2013, he was paired alongside old karting teammate and friend Nico Rosberg. Over their four seasons as teammates, a period of Mercedes dominance Formula One, the pair's relationship became strained and, at times, led to volatile confrontations on and off the track.<ref>{{cite web|url=http://www.espn.co.uk/f1/story/_/id/16758147/a-line-lewis-hamilton-nico-rosberg-rivalry|title=Lewis Hamilton-Nico Rosberg rivalry: A timeline|last=Saunders|first=Nate|date=5 July 2016|work=ESPN|accessdate=10 August 2017}}</ref> Hamilton and Rosberg were first teammates in 2000, when they were in karting. They raced for Mercedes Benz McLaren in Formula A, where Hamilton became European champion, with Rosberg not far behind. [//en.wikipedia.org/wiki/Robert_Kubica Robert Kubica], who raced with them before Formula One, recalled how they were competitive both on and off the track, saying "they would even have races to eat pizza, always eating two at a time".<ref name="auto11">{{cite web|url=https://www.theguardian.com/sport/blog/2016/nov/25/lewis-hamilton-nico-rosberg-friendship-rivalries#img-1|title=Lewis Hamilton v Nico Rosberg: how friendship turned to fiercest of rivalries|last=Weaver|first=Paul|date=25 November 2016|work=The Guardian|accessdate=10 August 2017}}</ref> Sports journalist Paul Weaver contrasts their upbringings:<ref name="auto11" /> Rosberg, an only child, was born in Germany but brought up in Monaco and was the son of the wealthy former Formula One world champion, [//en.wikipedia.org/wiki/Keke_Rosberg Keke Rosberg], whereas Hamilton was born on a [//en.wikipedia.org/wiki/Council_estate council estate] in Stevenage, and his father had to work multiple jobs to fund his son's junior racing.<ref name="observer" />
 
