--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -217,11 +217,11 @@ Nådat hy nen kontrakt had eteakened med Mercedes dat töt 2020 sül düren, wyr
 [[File:Lewis_Hamilton_2008_Britain_6.jpg|rechts|duum|Hamilton wön med meyr as nen minuut vöärsprung up de tweyde plekke Nick Heidfeld by den britsken Grouten Prys van 2008.]]
 Hamilton wördet esen as eynen van de meyst komplete koureurs van et veld. As rekordholder allertyden van de meyste eyrste startplåtsen, wördet Hamilton beskowd as eynen van de rapste kwalificeerders uut den sport. Ok is hy nen tåien racer, hy blinket uut up verskeydene typen bånen. Hy is beskreven as dat hy nen agressiven rystyl hevt, wat van tyd töt tyd dertoo leidet dat hy syne vöärwylen vastsettet. Hamilton is epresen vöär syn vermogen üm sich an te passen an variatsys in de upbow van de wågen en an wisselende ümstandigheyden van bånen; döärhen syne karriere, hevt hy gewöänlik minder brandstov as syne teammöäte vanweagen syn vermogen üm vårt too beholden in de buchten undanks instabiliteyt in de wågen. Hy is ok epresen vöär sy vermogen üm up belangryke momenten snelle ründen too ryden, vöäral by de kwalifikatsy.
 [[File:F1_2014_JAP_Lewis_Hamilton_4968.jpg|links|duum|Hamilton wön den japansken Grouten Prys van 2014 in heavigen reagen.]]
-Ayrton Senna was van grouten invlood up de rystyl van Hamilton. "Ik denke dat et deals kömmet ümdat ik når hem kek doo ik jüng waren en dacht 'dit is hoo ik wil ryden as ik den kans kryg' en ik ging dan når buuten en proberen et up de kartbåne. Mynen heylen anpak van racen is dåruut untwikkeled". Hy is vergeleaken med Senna in snelheyd. In 2010 reed Hamilton in den originelen McLaren MP4/4 wårmed Senna syne werldtitel had ewönnen as underdeyl van ne dokumentaire in dynen eer van den BBC-autoshow ''Top Gear''. In de dokumentaire nuumeden Hamilton en andere medekoureurs Senna as den nümmer eyn koureur allertyden.
+Ayrton Senna was van grouten invlood up den rystyl van Hamilton. "Ik denke dat et deals kömmet ümdat ik når hem kek doo ik jüng waren en dacht 'dit is hoo ik wil ryden as ik den kans kryg' en ik ging dan når buuten en proberen et up de kartbåne. Mynen heylen anpak van racen is dåruut untwikkeled". Hy is vergeleaken med Senna in snelheyd. In 2010 reed Hamilton in den originelen McLaren MP4/4 wårmed Senna syne werldtitel had ewönnen as underdeyl van ne dokumentaire in dynen eer van den BBC-autoshow ''Top Gear''. In de dokumentaire nuumeden Hamilton en andere medekoureurs Senna as den nümmer eyn koureur allertyden.
 
-Hamilton wördet esen as eynen van de beste reagenryders in den sport en summige van syne beste prestatsys waren in dy ümstandigheyden. Wellicht den upvallendsten van disse prestatsys was den britsken Grouten Prys van 2008 wår hy med meyr as nen minuut up Nick Heidfeld wön, et gröytsen verskil wårmed nen koureur ewönnen had sinds den autralisken Grouten Prys van 1995.
+Hamilton wördet esen as eynen van de beste reagenryders in den sport en summige van syne beste prestatsys waren in dy ümstandigheyden. Wellicht den upvallendsten van disse prestatsys was den britsken Grouten Prys van 2008 wår hy med meyr as nen minuut up Nick Heidfeld wön, et gröytsten verskil wårmed nen koureur ewönnen had sinds den autralisken Grouten Prys van 1995.
 
-Eyrder in syne karriere wyr Hamilton bekritisered vöär sums wuudend too wean, so as doo hy ediskwalificered wyr in Imola in den GP2 vöär et inhålen van den safety car, wat hy veer jår låter sül herhålen in de Formule Eyn in den europäesken Grouten Prys van 2010 in Valencia. Skonwal hevt Hamilton låter in syne karriere meyr vulwassenheyd etöyned, terwyl hy syne genadelousheyd en agressy beholdeden. Hy verdealeden de meningen van et publyk en vöärmålige koureurs in de låtste race van et seisoon van 2016, wår hy an de leiding teagen de teamorders inging döär Nico Rosberg too vertrågen en too dwingen in de achtervölgende gruup üm by öäre rivålen uut too lokken dat sy synen teammåten in gingen hålen, wat hem in ståt had estelled üm et werldkampioonskap too winnen.
+Eyrder in syne karriere wyr Hamilton bekritisered vöär sums wuudend too wean, so as doo hy ediskwalificered wyr in Imola in den GP2 vöär et inhålen van den safety car, wat hy veer jår låter sül herhålen in de Formule Eyn in den europäesken Grouten Prys van 2010 in Valencia. Skonwal hevt Hamilton låter in syne karriere meyr vulwassenheyd etöyned, terwyl hy syne genadelousheyd en agressy beholdeden. Hy verdealeden de meningen van et püblik en vöärmålige koureurs in de låtste race van et seisoon van 2016, wår hy an de leiding teagen de teamorders inging döär Nico Rosberg too vertrågen en too dwingen in de achtervölgende gruup üm by öäre rivålen uut too lokken dat sy synen teammåten in gingen hålen, wat hem in ståt had estelled üm et werldkampioonskap too winnen.
 
 === Untvangst ===
 Hamilton wördet våke esen as den besten koureurs van syne generatsy en algemeyn beskowed as eynen van den gröytsten Formule Eynkoureurs in de geskydenis van den sport. Våke wördet hy beskowed by den gröytsten britsken koureurs in de Formule Eyn, Hamilton is den meyst süksesvullen, want hy hevt meyr raceoaverwinningen dan eynig anderen britsken koureur in de geskydenis van de Formule Eyn en vyv oaverwinningen in den britsken Grouten Prys net as Jim Clark en Alain Prost. Syne lükse leavensstyl en interessen buuten de Formule Eyn bünt bekritisered, skonwal hebbet lüde uut den sport so as Emerson Fittipaldi en Christian Horner öäre steun egeaven vöär Hamiltons vermogen üm kontakt too måken med de fans. Bernie Ecclestone hevt reagelm tigBereagered med syne bewundering van et vermogen van Hamilton üm den sport too promoten med synen leavensstyl, upmarkend hoo hy blyde is üm med fans üm too gån anders as sümmige van syne kollegas. Sinds Hamiltons eyrste seisoon in 2007, hevt den jårliksken werldwyden upbrengst van de Formule Eyn tooenömmen med 53% når $1,83&nbsp;miljard up 31 jüly 2016.
