/* Rivaliteyt med Nico Rosberg */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -230,7 +230,7 @@ Al nen grout talent as nen tyner, hevt Hamilton sichselv neaderesettet as eynen 
 
 Dree jår låter nådat hy syne tweyde en darde werldtitel had behåled med Mercedes up ne dominante wyse vöär jöygdvrind en teammft Nico Rosberg verklareden David Coulthard Hamilton den besten koureur van syne generatsy en nuumeden hem <nowiki>''den Ayrton Senna van synen tyd''</nowiki>. Disse mening wyr uutendelik breyder eakseptered by et püblik, de eksperts, medekoureurs en vöärmålige koureurs. Syne minder süksesvulle jåren by McLaren bünt ok ecitered as nen vöärbeyld van syne ryvermogen ümdat Hamilton ten minsten eyne race hevt ewönnen per seisoon in twålv seisoonen up nen ry en kreg groute lov van ervåren koureurs vöär et behålen van winnende prestatsys uut wågen dy neet dominant waren. Terwyl et sükses van Hamilton wyderging, wårby hy de meyste eyrste startpositsys allertyden en et up eyn nå gröytsten antal raceoaverwinningen, as ok syne veerde werldtitel, ging et debat van et püblik en de eksperts oaver van synen status in de moderne Formule Eyn in nen debat over synen status tüsken de gröytste koureurs in de geskydenis.
 
-=== Rivaliteyt ned Nico Rosberg ===
+=== Rivaliteyt med Nico Rosberg ===
 [[File:Nico_Rosberg_and_Lewis_Hamilton_2016_Malaysia.jpg|rechts|duum|Lewis Hamilton (left) and Nico Rosberg (right) at the [//en.wikipedia.org/wiki/2016_Malaysian_Grand_Prix 2016 Malaysian Grand Prix].]]
 When Hamilton joined Mercedes in 2013, he was paired alongside old karting teammate and friend Nico Rosberg. Over their four seasons as teammates, a period of Mercedes dominance Formula One, the pair's relationship became strained and, at times, led to volatile confrontations on and off the track.<ref>{{cite web|url=http://www.espn.co.uk/f1/story/_/id/16758147/a-line-lewis-hamilton-nico-rosberg-rivalry|title=Lewis Hamilton-Nico Rosberg rivalry: A timeline|last=Saunders|first=Nate|date=5 July 2016|work=ESPN|accessdate=10 August 2017}}</ref> Hamilton and Rosberg were first teammates in 2000, when they were in karting. They raced for Mercedes Benz McLaren in Formula A, where Hamilton became European champion, with Rosberg not far behind. [//en.wikipedia.org/wiki/Robert_Kubica Robert Kubica], who raced with them before Formula One, recalled how they were competitive both on and off the track, saying "they would even have races to eat pizza, always eating two at a time".<ref name="auto11">{{cite web|url=https://www.theguardian.com/sport/blog/2016/nov/25/lewis-hamilton-nico-rosberg-friendship-rivalries#img-1|title=Lewis Hamilton v Nico Rosberg: how friendship turned to fiercest of rivalries|last=Weaver|first=Paul|date=25 November 2016|work=The Guardian|accessdate=10 August 2017}}</ref> Sports journalist Paul Weaver contrasts their upbringings:<ref name="auto11" /> Rosberg, an only child, was born in Germany but brought up in Monaco and was the son of the wealthy former Formula One world champion, [//en.wikipedia.org/wiki/Keke_Rosberg Keke Rosberg], whereas Hamilton was born on a [//en.wikipedia.org/wiki/Council_estate council estate] in Stevenage, and his father had to work multiple jobs to fund his son's junior racing.<ref name="observer" />
 
