--- a/Leegsaksische_vlaag.mw
+++ b/Leegsaksische_vlaag.mw
@@ -42,7 +42,10 @@ Ofbeelding:Hanse_Stettin.svg|<center>[[Stetten]]
 </gallery>
 
 == Vlaag van t Nederlaands Leegsaksisch ==
-[[Ofbeelding:Intersaksische vlagge 3.svg|thumb|Vlaag veur t Leegsaksisch]]
+[[Bestaand:Intersaksische vlagge 3.svg|thumb|Vlaag veur t Leegsaksisch]]
+[[Bestaand:Noordlandflagg.svg|thumb|De Noordlandflagg]]
+[[Bestaand:Achterhook_vlagge.png|thumb|De Aachterhoukse vlaag]]
+[[Bestaand:Veluwse vlagge.png|thumb|Vlaag veur de Veluwe]]
 Dizze vlaag is ontworpen en verkozen deur de gemainschop van de [[Leegsaksische Wikipedie]] ter promotie van de Leegsaksische toal en kultuur. De vlaag wordt deur nog gain ìnkelde organisoatsie erkend.
 
 De vlaag bestaait oet de kleuren [[rood]], [[wit]] en [[gruin]]. Rood en wit binnen kleuren dij vanôf de [[Hanze]]tied voak broekt wörren ien t Leegsaksische gebied veur op vlagen en [[woapen]]s. De maiste [[Hanzevlagen]] bestoan den ook oet dizze twij kleuren. De kleur gruin is ôfkomsteg oet t woapen van de olle Saksische streek rond de Noordzee, t staait ook veur de [[natuur]], t boerenleven, grui en n goie toukomst. De kleur gruin wordt ook voak broekt ien al bestoande vlagen van [[daarp|lougen]], [[Stad (woonstee)|steden]] en [[gemiente (bestuur)|gemainten]] ien t Leegsaksische toalgebied.
@@ -52,10 +55,8 @@ t Peerd komt der ook ien veur. t Verschil is wel dat t peerd de aandere kaant oe
 Ien de Leegsaksische vlaag staait, net as bie de [[Interfraise vlaag]], ook t [[Skandinoavische kruus]]. t Skandinoavische kruus symboliseert de grote ienvloud dij t Leegsaksisch had het op de Skandinoavische toalen en de verwaantschop tuzzen de verschillende vôlker dij laangs de [[Noordzee|Noord-]] en [[Oostzee]]kost leven. Ook staait t veur liekwel de [[christendom|kristelke]] as veur-kristelke religies. 
 
 De vlaag is haalverwegens [[2008]] oetdocht.
-<br clear="all">
 
 ==Noordlandflagg==
-[[Bestaand:Noordlandflagg.svg|thumb|De Noordlandflagg]]
 Ook in Duutsland is n vlaag oetdocht veur t Leegsaksisch <ref>[http://www.noordlandflagg.de/ Webstee van de Noordlandflagg]</ref>. Dizze vlaag is n blaauw Skandinoavisch kruus mit n gele raand op n gruine vlaag. De kleuren van de vlaag hebben apmoal zien aigen betaikenis: gruin van de velden en waailaanden, geel van t koolzoad en de blommen en blaauw van wotter en de wiede hemel.
 
 == Nije regionoale vlagen ==
@@ -66,9 +67,7 @@ Sunt [[jannewaori|jannewoari]] [[2018]] is der ook n [[Achterhook|Aachterhoukse]
 Veur t 40-joareg bestoan van de [[Stellingwarver Schrieversronte]] is ien [[2012]] n spesjoale vlaag môkt<ref>[http://www.stellingwerf.nl/?n_id=239012 Stellingwerf.nl: "Ni'je Stellingwarver vlagge prissenteerd"]</ref>. t Is n wiedere oetwaarken van n vlaag dij ien [[2009]] ontwörpen is veur t 700-joareg bestoan van de [[Stellenwaarf]]. t Het n witte aachtergrond, mit twij vermiljoenrode strepen, ain bovenaan en ain onderaan mit doarin schreven ''Stellingwarf'', en in t midden twij [[griffioenen]] (van de [[Ooststellingwarf|Oost-]] en [[Weststellingwarf|Weststellenwaarf]]) dij noar mekoar kieken. De vlaag wordt aal meer en meer broekt binnen de Stellenwaarf.
 
 === Veluuwse vlaag ===
-[[Bestaand:Veluwse vlagge.png|thumb|Vlaag veur de Veluwe]]
 Veur de [[Leegsaksieze Wikipedie|Leegsaksische Wikipedie]] is der ien [[2012]] n vlaag ontwörpen veur [[regio]] [[Veluwe]]. De kleuren geel en blaauw binnen baseerd op bestoande vlagen van [[Veluwe|Veluuwse]] [[gemiente (bestuur)|gemainten]], dij op heur beurt weer oet de [[Gelderse vlaag]] votkomen. In t midden van de vlaag staait n swaart [[haart (daaier)|haart]]. t Haart is n typisch symbool veur de Veluwe, t is ook op verschillende vlagen oet de Veluwe te zain zo as [[Putten]], [[Nunspeet]] en [[Epe]]. t Idee van de strepen op de vlaag komen oet de [[Harderwiek]]er en [[Elburg]]er, [[Attem|Hattemse]] en [[Armelo]]se vlagen.
-<br clear="all">
 
 == Hìnwiezen ==
 <references/>
