/* Rivaliteyt med Nico Rosberg */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -1,16 +1,16 @@
 '''Lewis Carl Davidson Hamilton''' <small>MBE</small> (geboaren 7 january 1985) is nen britsk autokoureur den rydet in de [[Formule Eyn]] vöär [[Mercedes AMG Petronas]]. Synde nen veermålig Formule Eyn werldkampioon, wördet hy våke beskowd as den besten koureur van syne generatsy en wyd esen as eynen van de gröytste koureurs in de geskydenis van den sport. Hy wön syne eyrste werldkampioonskapstitel med [[McLaren]] in 2008, dårnå verhüseden hy når Mercedes, wår hy twey titels achter mekare wön in 2014 en 2015 vöär et winnen van syne veerde titel in 2017. As statistisk den suksesvülsten britsken koureur in de geskydenis van den sport, hevt Hamilton meyr werldkampioonskapstitels (4) en meyr raceoaverwinningen (70) as eynig ander britsk koureur in de Formule Eyn. Hy hevt ok de rekords vöär de meyste karierrepunten allertyden (2916), oaverwinningen up et höygste antal verskillende circuits (26), de meyste pole positions allertyden (79) en de meyste grand slams in eyn seisoon (3).
 
-Terwyl hy geboaren wyr en upegröieden in [[Stevenage]], [[Hertfordshire]], begön Hamiltons interesse in et racen doo syn våder hem nen radiografisk bestüürbåren auto köcheden as hy sesse waren. Hy teakenden by McLarens Young Driver Support Programme in 1998, nådat hy McLaren teambaas Ron Dennis benadereden by nen uutreikingsceremony dree jår dårvöär en sei "up nen dag wül ik in ow wågens ryden". Nå et winnen van de [[britske Formule Renault]], [[Formule 3 Euro Series]] en [[GP2]] kampioonskappen, underweg ümhoog up de racekarrierelere, maken hy twålv jår nå syn eyrste üntmoting med Dennis syn Formule Eyn-debuut vöär McLaren in 2007. Ümdat hy van nen emengeden achtergrund kümt, med nen swarten våder en ne witte moder, is Hamilton den eyrsten en eynigen swarten koureur den in de Formule Eyn rydt.
+Terwyl hy geboaren wyr en upegröieden in [[Stevenage]], [[Hertfordshire]], begön Hamiltons interesse in et racen doo synen våder hem nen radiografisk bestüürbåren auto köcheden as hy sesse waren. Hy teakenden by McLarens Young Driver Support Programme in 1998, nådat hy McLaren teambaas Ron Dennis benadereden by nen uutreikingsceremony dree jår dårvöär en sei "up nen dag wül ik in ow wågens ryden". Nå et winnen van de [[britske Formule Renault]], [[Formule 3 Euro Series]] en [[GP2]] kampioonskappen, underweg ümhoog up de racekarrierelere, maken hy twålv jår nå syn eyrste üntmoting med Dennis syn Formule Eyn-debuut vöär McLaren in 2007. Ümdat hy van nen emengeden achtergrund kümt, med nen swarten våder en ne witte moder, is Hamilton den eyrsten en eynigen swarten koureur den in de Formule Eyn rydt.
 
 In syn eyrsten seisoon in de Formule Eyn, haleden Hamilton verskydene rekords as hy tweyds endigeden in et seisoon 2007 achter Kimi Räikkönen med precys eyn punt verskil, inklusiv dy vöär de meyste podiumfinishes up ne rye van nen debuut (9), de edeyld meyste oaverwinningen in nen debuutseisoon (4) en de meyste punten in nen debuutseisoon (109). Et völgenden seisoon, wön hy syne eyrste titel up dramatiske wyse; in den låtsten hook van de låtste runde in de låtste race van et seisoon, wårdöär hy den toonmålig jüngsten Formule Eyn werldkampioon in de geskydenis wyr. Nå noch veer jår by McLaren sünder noch höyger as veerdes in de individuele standen te endigen, teakeneden Hamilton by Mercedes in 2013, sich hereynigend med synen kartteammåt uut synen jöögd, [[Nico Rosberg]]. In syn eyrsten seisoon, endigen hy wederüm veerdes, de darde mål in vyv jår.
 
 Twey suksesvülle seisuunen völgen as Hamilton syne tweyde en darde titel wön. Hamilton wön 11 races in 2014, in nen swår bevöchten kampioonskapsgevecht med Nico Rosberg, beslist in de låtste race van et seisoon, wår Hamilton den oaverwinning behalen üm sich van syne tweyde werldkampioonskapstitel too verseakeren. Et seisoon dårnå stellen Hamilton syne darde werldtitel veilig med dree races too gån, in nen seisoon wårin hy nen rekordantal van 17 mål up et podium endigen en kwam hy med dree wereldkampioonskappen up gelyke höygte med synen held [[Ayrton Senna]]. Nådat hy tweyds endigen achter Nico Rosberg in 2016, wön Hamilton in 2017 syne veerde werldtitel en kwam hy nevven [[Juan Manuel Fangio]], [[Michael Schumacher]], [[Alain Prost]] en [[Sebastian Vettel]] in et rytjen koureurs med veer ov meyr werldkampioonskapstitels.
 
 == Vroggen leaven ==
-Hamilton wyr geboaren up 7 january 1985 in Stevenage, Hertfordshire, [[Engelaand (regio)|Engeland]]. Skonwal wyd verspreid is dat hy enömd sol wean når den amerikånsken sprinter Carl Lewis, segt Hamilton dat dit neet et geval is. Hamiltons moder, Carmen (Larbalestier), is blank britsk, terwyl syn våder, Anthony Hamilton, swart britsk, wat hem van emenged ras mikt; hy süt sichsülv as swarten.Lewis olders skeidden doo hy twey was; dårdöär, woanen hy by syne moder en halvsüsters töt hy twålv wyr, doo hy gin woanen by syne våder, styvmoder Linda en halvbroder Nicolas, ok nen professioneel koureur, den cerebrale palsy hevt. Begin 2011 teakenen Nicolas by Total Control Racing üm syne racekarierre too starten in de Renault Clio Cup van 2011. Hamilton wyr upevood as roomsk katolyk.
+Hamilton wyr geboaren up 7 january 1985 in Stevenage, Hertfordshire, [[Engelaand (regio)|Engeland]]. Skonwal wyd verspreid is dat hy enömd sol wean når den amerikånsken sprinter Carl Lewis, segt Hamilton dat dit neet et geval is. Hamiltons moder, Carmen (Larbalestier), is blank britsk, terwyl syn våder, Anthony Hamilton, swart britsk, wat hem van emenged ras mikt; hy süt sichsülv as swarten.Lewis olders skeidden doo hy twey was; dårdöär, woanen hy by syne moder en halvsüsters töt hy twålv wyr, doo hy gin woanen by syne våder, styvmoder Linda en halvbroder Nicolas, ok nen professioneel koureur, den cerebrale verlamming hevt. Begin 2011 teakenen Nicolas by Total Control Racing üm syne racekarierre too starten in de Renault Clio Cup van 2011. Hamilton wyr upevood as roomsk katolyk.
 
-[[Bestaand:Hamilton and Father Brazil 2008.jpg|duum|links|Anthony Hamilton, Lewis syn våder en toonmåligen manager, vyrt feest med synen sön nå den [[Groute Prys van Brasilie van 2008.|brasiliaansken Grand Prix van 2008.]]]]
-Hamiltons våder köcht hem nen radiografisk bestüürbåren auto in 1991, den hem et eyrsten gevuul van racekompetitsy gaven. Hamilton wyr tweyds in et nationalen BRCA kampioonskap et völgenden jår. Hy sei oaver den tyd: "Ik bestüren disse avstandsbestüürbåre autos en wön klubkampioonskappen van vulwaskenen". Dårdöär köcht syn våder hem synen eyrsten kartauto as nen karstkado up nen leaftyd van ses jåren old. Syn våder sei hem dat hy syne racekarierre understütten sol so lang as hy hard warken vöär skole. Üm synen sön stüt too geaven, deed Anthony avstand van syne båne as nen informatsytechnologymanager en wyr nen kontrakteur; sums warken hy in dree bånen tegelyk, terwyl hy ok noch by alle races van syn söne anweasig was. Anthony setten låter syn eigenen komputerbedryv up, terwyl hy Lewis noch steads managen. Lewis be-endigen syn warkbetrekking med synen våder begin 2010 en teakenen in määrt 2011 nen managementdeal med Simon Fuller syn firma XIX Entertainment. In november 2014 kondigen Hamilton an dat hy syn managementkonkrakt med Fuller neet hernyen sol.
+[[Bestaand:Hamilton and Father Brazil 2008.jpg|duum|links|Anthony Hamilton, Lewis synen våder en toonmåligen manager, vyrt feest med synen sön nå den [[Groute Prys van Brasilie van 2008.|brasiliaansken Grand Prix van 2008.]]]]
+Hamiltons våder köcht hem nen radiografisk bestüürbåren auto in 1991, den hem et eyrsten gevuul van racekompetitsy gaven. Hamilton wyr tweyds in et nationalen BRCA kampioonskap et völgenden jår. Hy sei oaver den tyd: "Ik bestüren disse avstandsbestüürbåre autos en wön klubkampioonskappen van vulwaskenen". Dårdöär köcht synen våder hem synen eyrsten kartauto as nen karstkado up nen leaftyd van ses jåren old. Syn våder sei hem dat hy syne racekarierre understütten sol so lang as hy hard warken vöär skole. Üm synen sön stüt too geaven, deed Anthony avstand van syne båne as nen informatsytechnologymanager en wyr nen kontrakteur; sums warken hy in dree bånen tegelyk, terwyl hy ok noch by alle races van syn söne anweasig was. Anthony setten låter syn eigenen komputerbedryv up, terwyl hy Lewis noch steads managen. Lewis be-endigen syn warkbetrekking med synen våder begin 2010 en teakenen in määrt 2011 nen managementdeal med Simon Fuller syn firma XIX Entertainment. In november 2014 kondigen Hamilton an dat hy syn managementkonkrakt med Fuller neet hernyen sol.
 
 Lewis Hamilton sat up skole up The John Henry Newman School, ne döär vrywilligers eleide katolyke middelbåre skole in Stevenage, Hertfordshire. Nevven et racen, spelen hy played vootbal vöär syn skoleteam med den engelsken internationalen middenvelder Ashley Young. Hamilton, nen Arsenal fan, sei dat hy vootballer ewest wart as hy de Formule Eyn neet had ehåld ov nen kriketer, ümdat hy beyde espöld hevt vöär syne skoleteams. In february 2001 begön hy ne study an de Cambridge Arts and Sciences (CATS), nen privaat ''sesde vörm'' kollege in Cambridge. Doo hy vyv jår was, nam Hamilton karatelessen üm sichsülv too verdeadigen vanweagen et pesten up skole; later, learen hy nen eynwyler te beryden, as deyl van syne kartrivaliteyt med tookümstigen F1 Mercedes-teammåt Nico Rosberg, den der al eynen beryden kön.
 
@@ -231,15 +231,15 @@ Al nen grout talent as nen tyner, hevt Hamilton sichselv neaderesettet as eynen 
 Dree jår låter nådat hy syne tweyde en darde werldtitel had behåled med Mercedes up ne dominante wyse vöär jöygdvrind en teammft Nico Rosberg verklareden David Coulthard Hamilton den besten koureur van syne generatsy en nuumeden hem <nowiki>''den Ayrton Senna van synen tyd''</nowiki>. Disse mening wyr uutendelik breyder eakseptered by et püblik, de eksperts, medekoureurs en vöärmålige koureurs. Syne minder süksesvulle jåren by McLaren bünt ok ecitered as nen vöärbeyld van syne ryvermogen ümdat Hamilton ten minsten eyne race hevt ewönnen per seisoon in twålv seisoonen up nen ry en kreg groute lov van ervåren koureurs vöär et behålen van winnende prestatsys uut wågen dy neet dominant waren. Terwyl et sükses van Hamilton wyderging, wårby hy de meyste eyrste startpositsys allertyden en et up eyn nå gröytsten antal raceoaverwinningen, as ok syne veerde werldtitel, ging et debat van et püblik en de eksperts oaver van synen status in de moderne Formule Eyn in nen debat over synen status tüsken de gröytste koureurs in de geskydenis.
 
 === Rivaliteyt med Nico Rosberg ===
-[[File:Nico_Rosberg_and_Lewis_Hamilton_2016_Malaysia.jpg|rechts|duum|Lewis Hamilton (left) and Nico Rosberg (right) at the [//en.wikipedia.org/wiki/2016_Malaysian_Grand_Prix 2016 Malaysian Grand Prix].]]
-When Hamilton joined Mercedes in 2013, he was paired alongside old karting teammate and friend Nico Rosberg. Over their four seasons as teammates, a period of Mercedes dominance Formula One, the pair's relationship became strained and, at times, led to volatile confrontations on and off the track.<ref>{{cite web|url=http://www.espn.co.uk/f1/story/_/id/16758147/a-line-lewis-hamilton-nico-rosberg-rivalry|title=Lewis Hamilton-Nico Rosberg rivalry: A timeline|last=Saunders|first=Nate|date=5 July 2016|work=ESPN|accessdate=10 August 2017}}</ref> Hamilton and Rosberg were first teammates in 2000, when they were in karting. They raced for Mercedes Benz McLaren in Formula A, where Hamilton became European champion, with Rosberg not far behind. [//en.wikipedia.org/wiki/Robert_Kubica Robert Kubica], who raced with them before Formula One, recalled how they were competitive both on and off the track, saying "they would even have races to eat pizza, always eating two at a time".<ref name="auto11">{{cite web|url=https://www.theguardian.com/sport/blog/2016/nov/25/lewis-hamilton-nico-rosberg-friendship-rivalries#img-1|title=Lewis Hamilton v Nico Rosberg: how friendship turned to fiercest of rivalries|last=Weaver|first=Paul|date=25 November 2016|work=The Guardian|accessdate=10 August 2017}}</ref> Sports journalist Paul Weaver contrasts their upbringings:<ref name="auto11" /> Rosberg, an only child, was born in Germany but brought up in Monaco and was the son of the wealthy former Formula One world champion, [//en.wikipedia.org/wiki/Keke_Rosberg Keke Rosberg], whereas Hamilton was born on a [//en.wikipedia.org/wiki/Council_estate council estate] in Stevenage, and his father had to work multiple jobs to fund his son's junior racing.<ref name="observer" />
+[[File:Nico_Rosberg_and_Lewis_Hamilton_2016_Malaysia.jpg|rechts|duum|Lewis Hamilton (links) en Nico Rosberg (rechts) by den Grouten Prys van Maleysie van 2016.]]
+Doo Hamilton tootrad töt Mercedes in 2013, wyr hy nevven synen olden kartteammåt en vrind Nico Rosberg esetted. In öäre veer seisonen as teammåten, ne periode van dominantsy van Mercedes in de Formule Eyn, wyren de betrekkingen van de twey espannen en leideden sums töt heavige konfrontatsys up en buuten de båne. Hamilton en Rosberg wyren vöär et eyrst teammåten in 2000, doo sy karteden. Sy raceden vöär Mercedes Benz McLaren in de Formule A, wår Hamilton europäesk kampioon wyr med Rosberg neet wyd derachter. Robert Kubica, den med öär raceden vöär de Formule Eyn, erinnereden sich hoo sy sowal up as buuten de båne kompetitiv waren en sei "sy hadden sölvs races van pizzas eaten, sy eateden der altyd twey in eyn mål". Sportjournalist Paul Weaver geavet et kontrast van öäre upvoodingen ancontrasts their upbringings: Rosberg, nen eynig kind, wyr geboaren in Düütskland mår wyr groutebracht in Monako en was den sön van nen ryken vöärmåligen Formule Eynwerldkampioon,  Keke Rosberg, terwyl Hamilton wyr geboaren in nen hüürflatwoning in Stevenage en synen våder mos meyrdere bånen hebben üm et jöygdracen van synen sön too bekostigen.
 
-Pundit and commentator Will Buxton compared the character and driving styles of the pair, labelling Hamilton as the faster driver, with more natural ability while labelling Rosberg, while not as quick, as the more intelligent driver.<ref name="auto7" /> Their old karting boss, Dino Chiesa, admitted Hamilton was the faster driver whereas Rosberg, who once said to Chiesa "everything relates to physics and maths", was always more serious and analytical.<ref name="observer" /> This led several to believe that Rosberg would achieve greater success in Formula One, the highest level of open wheel racing, due to the intellectual capacity required to manage brakes, energy harvesting, tyre management and moderate his fuel usage.<ref name="auto7" /> However, Hamilton's tyre management has frequently allowed him to push on for longer, often enabling optimum race strategies, and his fuel usage has regularly been better than almost anyone on the grid. Sky Sport's Mark Hughes, commented "Rosberg has a more scientific methodology, looks to fine-tune more specifically than Hamilton who typically tends just to find a balance he can work with, then adapt his driving around it".<ref name="auto5" />
+Ekspert en kommentator Will Buxton vergeleek et karakter en de rystylen van de twey en markereden Hamilton as den rapperen koureur med meyr natüürlik vermogen, terwyl hy Rosberg, hoowal hy neet even rap is, markereden as den intelligenteren koureur. Öären olden kartbås Dino Chiesa gav too dat Hamilton den rapperen koureur was, terwyl Rosberg, den ens teagen Chiesa sei dat ''alles med natüürkünde en wiskünde too måken hevt'', altyd seriöser en analytisker was. Dat leideden dertoo dat velen gelöveden dat Rosberg meyr sükses sül behålen in de Formule Eyn, et höygsten nivo van oapenwylracen, vanweagen et intellektüelen vermogen dat benöydiged is üm remmen in too stellen, energy uut eksterne brunnen üm too setten, de wylinstellingen by too stellen en synen brandstovverbruuk by too stellen. Skonwal hebbet de wylinstellingen van Hamilton hem våke in ståt estelled üm langer döär too gån, hy kreereden våke optimåle racestrategyen en syn brandstovverbruuk is meystal better ewest dan dat van de meyste van syne konkurrenten. Mark Hughes van Sky Sport sei: "Rosberg hevt ne weatenskaplikere methodology, proberet specifiker dingen verfyned by te stellen as Hamilton, den typisk neiget üm nen balans too suuken wår hy med kan warken en syn ryden der dan up an too passen".
 
-In their time together as teammates, Hamilton won two World Championship titles to Rosberg's one, and scored more points in three out of their four seasons together. During this time, the pair won 54 of the 78 races over four seasons. In qualifying, Hamilton was superior to Rosberg, finishing ahead of his teammate on 42 occasions. Hamilton also had the upper hand over this period in race results, with 32 victories to Rosberg's 22 as well as securing 55 podium finishes, five more than Rosberg.<ref>{{Cite web|url=http://dailyautosport.com/f1/2016/12/lewis-hamilton-vs-nico-rosberg-statistics-of-the-confrontation-between-teammates-at-mercedes/|title=Lewis Hamilton vs Nico Rosberg: Statistics of the Confrontation Between Teammates at Mercedes|work=Daily Auto Sport|access-date=9 August 2017|language=en-GB}}</ref>
-[[File:Mercedes_duo_2013_Malaysia.jpg|links|duum|Rosberg was ordered to remain behind Hamilton at the [//en.wikipedia.org/wiki/2013_Malaysian_Grand_Prix 2013 Malaysian Grand Prix], the first of several controversial on-track incidents.]]
+In öären tyd toosammen as teammåten wön Hamilton twey werldtitels en Rosberg eyn en behåleden meyr pünten in dree van öäre veer seisonen toosammen. Edürende dissen tyd wönnen de twey 54 van de 78 races in veer seisonen. In kwalifikatsys was Hamilton better as Rosberg, wårby hy 42 mål vöär synen teammåt endigeden. Hamilton had ok bettere raceresultåten in disse periode med 32 oaverwinningen teagenover de 22 van Rosberg en behåleden ok 55 finishes up et podium, vyv meyr as Rosberg.
+[[File:Mercedes_duo_2013_Malaysia.jpg|links|duum|Rosberg wyr verplichted üm achter Hamilton too blyven in den Grouten Prys van Maleysie van 2013, et eyrsten van vele kontroversiele incidenten up de båne.]]
 
-==== Timeline of incidents ====
+==== Tydlyn van incidenten ====
 The first sign of tensions between the pair was at the [//en.wikipedia.org/wiki/2013_Malaysian_Grand_Prix 2013 Malaysian Grand Prix], where Mercedes implemented team orders, telling the quicker Rosberg to hold station behind Hamilton in fourth place to which Rosberg reluctantly obliged. Hamilton questioned the radio call and after the race admitted Rosberg had deserved the final spot on the podium. The incident, drowned out in the subsequent days by the [//en.wikipedia.org/wiki/2013_Malaysian_Grand_Prix%23Race "Multi-21"] saga at Red Bull, passed by without further controversy as the two friends moved on.<ref>{{Cite web|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/9951092/Malaysian-Grand-Prix-2013-Lewis-Hamilton-benefits-from-team-orders-as-Niko-Rosberg-fumes.html|title=Malaysian Grand Prix 2013: Lewis Hamilton benefits from team orders as Niko Rosberg fumes|date=24 March 2013|work=The Telegraph|access-date=9 August 2017|language=en-GB}}</ref>
 
 At the [//en.wikipedia.org/wiki/2014_Bahrain_Grand_Prix 2014 Bahrain Grand Prix], both the Mercedes drivers engaged in a wheel-to-wheel duel for the win. A late safety car had seemingly swung the favour to second-place Rosberg, who had the benefit of being on a better tyre, but after the restart Hamilton held firm in a close wheel-to-wheel encounter which passed without the Mercedes cars making contact. In [//en.wikipedia.org/wiki/Parc_ferme parc ferme] after the race the pair engaged in a mock fight.<ref name="auto" /> Mercedes was praised for allowing its drivers to race. However, it later emerged Rosberg had used engine modes banned by Mercedes to give himself a power advantage over Hamilton in the closing laps.<ref name="auto12">{{Cite web|url=http://en.espn.co.uk/f1/motorsport/story/184267.html|title=How Hamilton won the 2014 world title|date=23 November 2014|work=ESPN|access-date=10 August 2017|language=en-GB}}</ref>
