--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -1,8 +1,8 @@
 '''Lewis Carl Davidson Hamilton''' <small>MBE</small> (geboaren 7 january 1985) is nen britsken autokoureur den rydet in de [[Formule Eyn]] vöär [[Mercedes AMG Petronas]]. Synde nen veermålig Formule Eyn werldkampioon, wördet hy våke beskowed as den besten koureur van syne generatsy en wyd esen as eynen van de gröytste koureurs in de geskydenis van den sport. Hy wön syne eyrste werldkampioonskapstitel med [[McLaren]] in 2008, dårnå verhüseden hy når Mercedes, wår hy twey titels achter mekare wön in 2014 en 2015 vöär et winnen van syne veerde titel in 2017. As statistisk den süksesvülsten britsken koureur in de geskydenis van den sport, hevt Hamilton meyr werldkampioonskapstitels (4) en meyr raceoaverwinningen (70) as eynigen anderen britsken koureur in de Formule Eyn. Hy hevt ok de rekords vöär de meyste karierrepünten allertyden (2916), oaverwinningen up et höygste antal verskillende cirkuits (26), de meyste pole positions allertyden (79) en de meyste grand slams in eyn seisoon (3).
 
-Terwyl hy geboaren wyr en upegröieden in [[Stevenage]], [[Hertfordshire]], begön Hamiltons interesse in et racen doo synen våder hem nen radiografisk bestüürbåren auto köcheden as hy sesse waren. Hy teakenden by McLarens Young Driver Support Programme in 1998, nådat hy McLaren teambaas Ron Dennis benadereden by nen uutreikingsceremony dree jår dårvöär en sei "up nen dag wül ik in ow wågens ryden". Nå et winnen van de [[britske Formule Renault]], [[Formule 3 Euro Series]] en [[GP2]] kampioonskappen, underweg ümhoog up de racekarrierelere, maken hy twålv jår nå syn eyrste üntmoting med Dennis syn Formule Eyn-debuut vöär McLaren in 2007. Ümdat hy van nen emengeden achtergrund kümt, med nen swarten våder en ne witte moder, is Hamilton den eyrsten en eynigen swarten koureur den in de Formule Eyn rydt.
+Terwyl hy geboaren wyr en upegröieden in [[Stevenage]], [[Hertfordshire]], begön Hamiltons interesse in et racen doo synen våder hem nen radiografisk bestüürbåren auto köcheden as hy sesse waren. Hy teakenden by McLarens Young Driver Support Programme in 1998, nådat hy McLaren teambaas Ron Dennis benadereden by nen uutreikingsceremony dree jår dårvöär en sei "up nen dag wül ik in ow wågens ryden". Nå et winnen van de [[britske Formule Renault]], [[Formule 3 Euro Series]] en [[GP2]] kampioonskappen, underweg ümhoog up de racekarrierelere, maken hy twålv jår nå syn eyrste üntmoting med Dennis syn Formule Eyn-debuut vöär McLaren in 2007. Ümdat hy van nen emengeden achtergrund kümmet, med nen swarten våder en ne witte moder, is Hamilton den eyrsten en eynigen swarten koureur den in de Formule Eyn rydet.
 
-In syn eyrsten seisoon in de Formule Eyn, haleden Hamilton verskydene rekords as hy tweyds endigeden in et seisoon 2007 achter Kimi Räikkönen med precys eyn punt verskil, inklusiv dy vöär de meyste podiumfinishes up ne rye van nen debuut (9), de edeyled meyste oaverwinningen in nen debuutseisoon (4) en de meyste punten in nen debuutseisoon (109). Et völgenden seisoon, wön hy syne eyrste titel up dramatiske wyse; in den låtsten hook van de låtste runde in de låtste race van et seisoon, wårdöär hy den toonmålig jüngsten Formule Eyn werldkampioon in de geskydenis wyr. Nå noch veer jår by McLaren sünder noch höyger as veerdes in de individuele standen te endigen, teakeneden Hamilton by Mercedes in 2013, sich hereynigend med synen kartteammåt uut synen jöögd, [[Nico Rosberg]]. In syn eyrsten seisoon, endigen hy wederüm veerdes, de darde mål in vyv jår.
+In syn eyrsten seisoon in de Formule Eyn, haleden Hamilton verskydene rekords as hy tweyds endigeden in et seisoon 2007 achter Kimi Räikkönen med precys eyn punt verskil, inklusiv dy vöär de meyste podiumfinishes up nen ry van nen debuut (9), de edeyled meyste oaverwinningen in nen debuutseisoon (4) en de meyste punten in nen debuutseisoon (109). Et völgenden seisoon, wön hy syne eyrste titel up dramatiske wyse; in den låtsten hook van de låtste runde in de låtste race van et seisoon, wårdöär hy den toonmålig jüngsten Formule Eyn werldkampioon in de geskydenis wyr. Nå noch veer jår by McLaren sünder noch höyger as veerdes in de individuele standen too endigen, teakeneden Hamilton by Mercedes in 2013, sich hereynigend med synen kartteammåt uut synen jöögd, [[Nico Rosberg]]. In syn eyrsten seisoon, endigeden hy wederüm veerdes, de darde mål in vyv jår.
 
 Twey süksesvülle seisonen völgen as Hamilton syne tweyde en darde titel wön. Hamilton wön 11 races in 2014, in nen swår bevöchten kampioonskapsgevecht med Nico Rosberg, beslist in de låtste race van et seisoon, wår Hamilton den oaverwinning behåleden üm sich van syne tweyde werldkampioonskapstitel too verseakeren. Et seisoon dårnå stelleden Hamilton syne darde werldtitel veilig med dree races too gån, in nen seisoon wårin hy nen rekordantal van 17 mål up et podium endigeden en kwam hy med dree wereldkampioonskappen up gelyke höygte med synen held [[Ayrton Senna]]. Nådat hy tweyds endigen achter Nico Rosberg in 2016, wön Hamilton in 2017 syne veerde werldtitel en kwam hy nevven [[Juan Manuel Fangio]], [[Michael Schumacher]], [[Alain Prost]] en [[Sebastian Vettel]] in et rytjen koureurs med veer ov meyr werldkampioonskapstitels.
 
