--- a/Iowa.mw
+++ b/Iowa.mw
@@ -11,7 +11,7 @@ Höyvdstad [[Des Moines]] hevt ouk medeyne de meyste inwoaners van den ståt. Ee
 ==Literatuurverwysingen==
 <references/>
 
-<Verenigde Staoten>
+{{Verenigde Staoten}}
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Verenigde Stoatn van Amerika]]
